collection of updates

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,8 +1,8 @@
 ---
 name: Sean McGregor
-avatar: /static/images/avatar.png
-occupation: Founding Director, Digital Safety Research Institute
-company: UL Research Institutes
+avatar: /static/images/avatar.jpg
+occupation: Founding Director
+company: Digital Safety Research Institute @ ULRI
 email: newcontact@seanbmcgregor.com
 twitter: https://twitter.com/seanmcgregor
 linkedin: https://www.linkedin.com/in/seanbmcgregor
