--- a/data/blog/Sustainable-Development-Goals.mdx
+++ b/data/blog/Sustainable-Development-Goals.mdx
@@ -4,7 +4,7 @@ date: 2017-5-18 13:00
 slug: SustainableDevelopment
 category: Ethical Computing
 tags: ["Sustainable Development Goals", "Climate", "Biodiversity", "Contributed"]
-icon: glyphicon glyphicon-user
+icon: FaUser
 ---
 
 <a href="https://ai.xprize.org/news/blog/collaborating-ai-planetary-stewardship">
