--- a/data/blog/amazon-fresh.mdx
+++ b/data/blog/amazon-fresh.mdx
@@ -5,6 +5,7 @@ slug: AmazonFresh
 category: Incidents
 tags: ["Machine Learning", "Computer Vision", "Testing", "Adversarial Machine Learning", "Amazon", "Incidents"]
 summary: As someone that turned down an offer to work on cashierless checkout four years ago, I was keen to learn how far the technology has come. What I found was a fascinating case study in designing the human environment for computer vision systems, and I also went home with several items that I didn't pay for...
+icon: BiSolidCctv
 ---
 
 Do Amazon Fresh shoppers have a duty to shop in a manner the cameras understand? I simultaneously grabbed three items from a shelf at my new cashierless checkout store while **thousands of cameras monitored my movements**, but after placing the items in my cart, **I knew the cameras would have difficulty** with the event. Most people don't **grab three bags of frozen vegetables at a time**, but I always do. As an engineer exploring what I know to be a store in beta, I went home prepared to report a bug. I knew I was likely stealing vegetables in leaving the store, but I could correct it after the fact. Only I later learned, **Amazon would not permit me to pay for the stolen items.**
