--- a/data/blog/anatomy-of-an-incident.mdx
+++ b/data/blog/anatomy-of-an-incident.mdx
@@ -5,7 +5,7 @@ slug: Starship
 category: Incidents
 tags: ["Machine Learning", "Computer Vision", "Testing", "Robot", "Incidents"]
 summary: I opportunistically recorded a video of a delivery robot that _almost immediately_ got into trouble. What follows is an introduction to the design elements of delivery robots, followed by how these elements produced and recovered from a series of unfortunate events.
-icon: fas fa-truck-loading
+icon: FaTruckLoading
 ---
 
 During a recent stop over at UCLA, I opportunistically recorded a video of a delivery robot that _almost immediately_ got into trouble. What follows is an introduction to the design elements of delivery robots as shown by a series of unfortunate events.
