--- a/data/blog/color-selection-game.mdx
+++ b/data/blog/color-selection-game.mdx
@@ -4,7 +4,7 @@ date: 2016-6-10 12:00
 slug: color-selection-game
 category: privly
 tags: ["User Experience", "Spoofing", "Security"]
-icon: fa fa-eye-slash
+icon: FaEyeSlash
 ---
 
 <a href="/color-selection-game.html">
