--- a/data/blog/compromising-combination-bike-locks.mdx
+++ b/data/blog/compromising-combination-bike-locks.mdx
@@ -4,7 +4,7 @@ date: 2015-01-18 16:00
 slug: compromising-combination-bike-locks
 category: hacks
 tags: ["Passwords", "User Experience", "Algorithms"]
-icon: fas fa-sort-numeric-up-alt
+icon: FaSortNumericDownAlt
 ---
 
 <a href="/compromising-combination-bike-locks.html">
