--- a/data/blog/cryptographic-thinking.mdx
+++ b/data/blog/cryptographic-thinking.mdx
@@ -4,7 +4,7 @@ date: 2013-06-24 07:00
 slug: cryptographic-thinking
 category: privly
 tags: ["privacy", "cryptography"]
-icon: fa fa-lock
+icon: FaLock
 ---
 
 Advocates for a national DNA identity database won a major victory with
