--- a/data/blog/hacking-a-url-shortener-into-a-comment-system.mdx
+++ b/data/blog/hacking-a-url-shortener-into-a-comment-system.mdx
@@ -4,7 +4,7 @@ date: 2014-06-29 14:00
 slug: hacking-a-url-shortener-into-a-comment-system
 category: hacks
 tags: ["hacks", "urls", "censorship", "implicit hash table"]
-icon: fad fa-link
+icon: FaLink
 ---
 
 Static HTML generators are fun to play with, but they (obviously) suffer from a lack of dynamic content. Today I experimented with using URL shorteners as a distributed hash table as a means of commenting on static sites.
