--- a/data/blog/hcai.mdx
+++ b/data/blog/hcai.mdx
@@ -5,7 +5,7 @@ slug: hcaibook
 category: personal
 tags: ["HCAI", "machine learning", "testing", "AI", "user experience"]
 summary: A book review of a very timely book.
-icon: fa fa-globe
+icon: FaGlobe
 ---
 
 <>
