--- a/data/blog/jekyll.mdx
+++ b/data/blog/jekyll.mdx
@@ -5,7 +5,7 @@ slug: SafetyJekyll
 category: Ethical Computing
 tags: ["Machine Learning", "Ethics", "AI", "Safety"]
 summary: In the "Strange Case of Dr. Jekyll and Mr. Hyde," a London-based doctor in 1886 indulges in his worst instincts while transformed into the murderous Mr. Hyde. The classic work of gothic horror has much to teach us when deciding whether current advances in artificial intelligence (AI) are likely to be good (Dr. Jekyll) or bad (Mr. Hyde). Both the literary and technological references present the same answer...
-icon: fad fa-octagon
+icon: BsOctagonFill
 image: /static/images/blog/content/GodDevil.png
 ---
 
