--- a/data/blog/schism.mdx
+++ b/data/blog/schism.mdx
@@ -6,7 +6,7 @@ category: Ethical Computing
 tags: ["Machine Learning", "Ethics", "AI", "Safety"]
 summary: The AI ethics and safety communities are at a crossroads that will determine whether they work together in the production of safer intelligent systems, or continue down separate conflicted paths.
 image: /static/images/blog/content/schism/edited.png
-icon: fad fa-code
+icon: FaCode
 ---
 
 In December, I had the privilege of sitting on a panel ["Defining 'Safety' in Artificial Intelligence,"](https://casmi.northwestern.edu/news/articles/2022/casmi-hosts-panel-discussion-on-defining-safety-in-artificial-intelligence.html) with a collection of leaders in the AI impacts community. Perspectives varied, but it is clear we have reached a watershed moment for the field of AI safety. Recent events have produced an identity crisis in a field that has struggled for its proper place alongside responsible/trustworthy/ethical AI research. Focusing on three particularly impactful events, we have:
