--- a/data/blog/self-driving-car.mdx
+++ b/data/blog/self-driving-car.mdx
@@ -4,7 +4,7 @@ date: 2017-10-06 13:00
 slug: SelfDrivingCars
 category: Ethical Computing
 tags: ["Autonomy", "Cars"]
-icon: fa fa-car
+icon: FaCar
 ---
 
 I recently test-drove a Tesla Model X, which was the first time I had ridden in an all-electric vehicle since my neighbor drove me around in his pre-production [EV1](https://en.wikipedia.org/wiki/General_Motors_EV1) in the 90s. The Tesla experience cemented my view that the hype around electric vehicles is well-founded. However, a point of contention arose when the sales representative asserted that the vehicle has all the hardware necessary for full-autonomy. This assertion is ridiculous for several reasons, but perhaps the most convincing argument for general audiences is to appeal to biology.
