--- a/data/blog/should-i-change-my-password.mdx
+++ b/data/blog/should-i-change-my-password.mdx
@@ -4,7 +4,7 @@ date: 2014-04-09 13:35
 slug: should-i-change-my-password
 category: security
 tags: ["OpenSSL", "Heartbleed", "passwords"]
-icon: fa fa-exclamation
+icon: FaExclamation
 ---
 
 The web is rife with recommendations that users change their passwords following a [catastrophic bug](https://www.schneier.com/blog/archives/2014/04/heartbleed.html) in the widely used cryptography suite OpenSSL. So the question is, should you change your password?
