--- a/data/blog/unit-testing-algorithms-for-social-good.mdx
+++ b/data/blog/unit-testing-algorithms-for-social-good.mdx
@@ -4,7 +4,7 @@ date: 2014-06-27 16:00
 slug: unit-testing-social-good
 category: Ethical Computing
 tags: ["Machine Learning", "Algorithms", "Unit Testing", "Social Good", "Testing"]
-icon: fa fa-university
+icon: FaUniversity
 ---
 
 I attended a talk at [Open Source Bridge](http://opensourcebridge.org) titled ["Open Source is Not Enough: The Importance of Algorithm Transparency"](http://opensourcebridge.org/sessions/1345). The [TLDR](http://en.wiktionary.org/wiki/TLDR) of the presentation is that algorithms shape your view of the world which can lead to socially bad outcomes. Think [filter bubbles](http://www.ted.com/talks/eli_pariser_beware_online_filter_bubbles), [search manipulation](http://indianexpress.com/article/india/politics/google-search-manipulation-can-swing-votes-in-indian-elections/), etc.
