--- a/data/blog/visualization-for-mdps.mdx
+++ b/data/blog/visualization-for-mdps.mdx
@@ -4,7 +4,7 @@ date: 2015-10-05 16:00
 slug: visualization-for-mdps
 category: Visualization
 tags: ["Machine Learning", "MDPs", "Testing", "Markov Decision Processes"]
-icon: glyphicon glyphicon-fire
+icon: FaFireAlt
 ---
 
 <a href="http://mdpvis.github.io/">
