--- a/data/blog/vlhcc2015.mdx
+++ b/data/blog/vlhcc2015.mdx
@@ -4,7 +4,7 @@ date: 2015-10-19 13:00
 slug: vlhcc2015
 category: Visualization
 tags: ["Machine Learning", "MDPs", "Testing", "Markov Decision Processes"]
-icon: glyphicon glyphicon-user
+icon: FaRegUser
 ---
 
 <a href="/static/papers/VLHCC2015.pdf">
