--- a/data/blog/breakout.mdx
+++ b/data/blog/breakout.mdx
@@ -4,7 +4,7 @@ date: 2016-6-12 13:00
 slug: DeepQVisualization
 category: Visualization
 tags: ["Machine Learning", "MDPs", "Testing", "Markov Decision Processes"]
-icon: fa fa-gamepad
+icon: FaGamepad
 ---
 
 <iframe width="420" height="315" src="https://www.youtube.com/embed/Q70ulPJW3Gk" frameborder="0" allowfullscreen></iframe>
