--- a/data/blog/securing-user-content-in-the-javascriptable-web.mdx
+++ b/data/blog/securing-user-content-in-the-javascriptable-web.mdx
@@ -4,7 +4,7 @@ date: 2013-07-22 07:00
 slug: securing-user-content-in-the-javascriptable-web
 category: privly
 tags: ["OReilly", "systems", "privly"]
-icon: fa fa-chevron-right
+icon: FaChevronRight
 ---
 
 
