--- a/data/blog/syntiant-core-2.mdx
+++ b/data/blog/syntiant-core-2.mdx
@@ -5,7 +5,7 @@ slug: SyntiantCore2
 category: Syntiant
 tags: ["Deep Learning", "Chip Design", "Architectures", "AI", "Energy Efficiency", "Low Power"]
 summary: Among the high points in my career is shipping a new neural accelerator with the startup Syntiant. This blog post is how I portrayed the effort at the time.
-icon: fas fa-microchip
+icon: FaMicrochip
 ---
 
 > Update: my Syntiant Core 2 [presentation](https://youtu.be/uqR2MjucNw4?t=3070) bested Samsung and Qualcomm to win [Best Product at TinyML](https://www.syntiant.com/post/syntiant-ndp120-awarded-best-product-of-the-year-at-tinyml-summit)!
