add redirects for blog

--- a/data/blog/deepfake-cat-and-mouse.mdx
+++ b/data/blog/deepfake-cat-and-mouse.mdx
@@ -1,12 +1,11 @@
 ---
 title: Deepfake Detection Game
 date: 2019-12-11 13:00
-slug: DeepfakeDetectionGame
 category: security
 tags: ["deepfakes", "security", "Cat and Mouse", "GANs", "style transfer", "facebook", "machine learning"]
 summary: Video has long been a trusted source of ground truth for world events. People know images can be manipulated, but video manipulation is rare. This has changed with the advent of manipulating videos with neural networks. Automatic video manipulation tools, like those that swapped Nicolas Cage's face onto Amy Adams, are now fast, realistic, and cheap. Defending the public record requires methods for detecting these fakes. But is the deepfake detection game winnable?
 icon: FaUserNinja
-image: /static/images/blog/content/deepfake_example.gif
+images: ['/static/images/blog/content/deepfake_example.gif']
 ---
 
 import {ReactIconLi} from "components/Icons"
